tests/badly_positioned_make_exactt/badly_positioned_make_exactt.exp
Error ----------------------------------------------------------------------------------------------------- test.js:16:2

Cannot create `X` element because properties `x` and `y` are missing in props [1] but exist in props of class `X` [2].
[incompatible-type]

   test.js:16:2
   16| <X />;
        ^

References:
   test.js:16:1
   16| <X />;
       ^^^^^ [1]
   test.js:15:7
   15| class X extends React.Component<Props1<mixed>> {}
             ^ [2]



Found 1 error
